# rom-tools-and-workflows

./: .pylintrc  LICENSE  README.md  __init__.py  pyproject.toml  setup.cfg
.github/workflows/: check-formatting.yaml  deploy_docs.yaml  docs.yaml  install-and-test-mpi.yaml  install-and-test.yaml
custom-template/: module.html.jinja2
doc/: index.html  rom-tools-and-workflows.html  search.js
doc/rom-tools-and-workflows/: romtools.html
doc/rom-tools-and-workflows/romtools/: snapshot_data.html  trial_space.html  trial_space_utils.html  workflows.html
docs/: index.html  romtools.html  search.js
docs/romtools/: hyper_reduction.html  snapshot_data.html  trial_space.html  trial_space_utils.html  workflows.html
docs/romtools/hyper_reduction/: deim.html
docs/romtools/trial_space_utils/: orthogonalizer.html  outputter.html  scaler.html  shifter.html  splitter.html  svd_method_of_snapshots.html  truncater.html
docs/romtools/workflows/: dakota.html  greedy.html  parameter_spaces.html  sampling.html
examples/2d-reaction-diffusion/: demo-2d-diffusion.py  input.json
helper_scripts/: add-sandia-license.sh  bash-colors.sh  check-mpi-size.py  helpers.py  remove-sandia-license.sh
romtools/: __init__.py  snapshot_data.py  trial_space.py
romtools/composite_vector_space/: __init__.py
romtools/hyper_reduction/: __init__.py  deim.py  ecsw.py
romtools/trial_space/: __init__.py
romtools/trial_space_utils/: __init__.py  orthogonalizer.py  outputter.py  scaler.py  shifter.py  splitter.py  svd_method_of_snapshots.py  truncater.py
romtools/vector_space/: __init__.py
romtools/workflows/: __init__.py  application_coupler.py  models.py  parameter_spaces.py  workflow_utils.py
tests/romtools/: test_composite_vector_space.py  test_demo1.py  test_pressiolinalg.py  test_snapshots_mpi.py  test_trial_space.py  test_trial_space_svd_mpi.py  test_vector_space.py  test_vector_space_svd_mpi.py
(+56 files in other folders)
