[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "romtools"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    'docutils', 'importlib-metadata',
    'numpy', 'scipy', 'matplotlib', 'pdoc',
    'pytest', 'pytest-mpi>=0.6'
]

[tool.setuptools.dynamic]
version = {file = "version.txt"}

[tool.setuptools.packages.find]
where = ["."]

#https://setuptools.pypa.io/en/latest/userguide/dependency_management.html#optional-dependencies
[project.optional-dependencies]
WithMPI = ['mpi4py>3.1.4']
WithH5py = ['h5py']