[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "romtools"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    'docutils', 'importlib-metadata',
    'numpy', 'scipy', 'matplotlib', 'pdoc',
    'pytest==7.4.4', 'pytest-mpi>=0.6', 'pytest-timeout'
]
# using pytest>=8.0.0 causes CI failures (likely compatibility issues with pytest-mpi)

[tool.setuptools.dynamic]
version = {file = "version.txt"}

[tool.setuptools.packages.find]
where = ["."]

#https://setuptools.pypa.io/en/latest/userguide/dependency_management.html#optional-dependencies
[project.optional-dependencies]
WithMPI = ['mpi4py>3.1.4']
WithH5py = ['h5py']
