[metadata]
name = romtools
version = file: version.txt
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: C++
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries
    Development Status :: 5 - Stable

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
